# Vane

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README.tr.md  SECURITY.md  index.html  package-lock.json  package.json  security_audit_report.md  vite.config.ts
.claude/: settings.local.json
.claude/agents/: builder.md  planner.md  reviewer.md  ui-agent.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-zapret.yml  releases.yml
presets/: builtin.json  remote_template.json
src/: App.module.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  err.txt  errors.txt  tauri.conf.json
src-tauri/binaries/: nfqws-x86_64-unknown-linux-gnu
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/proptest-regressions/engine/: sanitizer.txt
src-tauri/src/: commands.rs  http.rs  lib.rs  logging.rs  main.rs  tray.rs  updater.rs
src-tauri/src/autostart/: mod.rs
src-tauri/src/config/: loader.rs  mod.rs  preset.rs
src-tauri/src/dns/: doh.rs  forwarder.rs  manager.rs  mod.rs  watchdog.rs
src-tauri/src/engine/: error.rs  job.rs  logger.rs  manager.rs  mod.rs  optimizer.rs  process.rs  sanitizer.rs
src-tauri/src/network/: mod.rs  router.rs  stats.rs  watcher.rs
src-tauri/src/presets/: mod.rs  remote.rs
src-tauri/src/privilege/: checker.rs
src/components/: EngineHealthBadge.module.css  EngineHealthBadge.tsx  UpdateBanner.module.css  UpdateBanner.tsx
src/hooks/: useEventListeners.ts  usePresets.ts
src/store/: engineStore.ts
src/styles/: globals.css  tokens.css
src/types/: engine.ts  ipc.ts  network.ts
src/utils/: argsParser.ts  presetValidator.ts  translations.ts
src/views/: DnsView.tsx  (+25 more)
(+25 files in other folders)
